Added content to all the necessary places

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<div class="content">
 							<h2>Software Development</h2>
 							<p>Lambda School Web Development Student<br>
-								Proficient in HTML, CSS and JavaScript
+								Proficient in HTML and CSS
 							</p>
 							<ul class="actions stacked">
 								<li><a href="#" class="button">See My Work</a></li>
@@ -69,13 +69,16 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Piano Performance</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<p>B.M. Piano Performance from Oakland University <br>
+								Performed with Oakland Chamber Orchestra <br>
+								Provide piano instruction to Beginners to Early-Advanced students<br>
+								</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="https://www.youtube.com/watch?v=Lgbxw9uFrWI" class="button">Watch My Performance</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight03.jpg" alt="" />
+							<img src="images/piano.jpg" alt="" />
 						</div>
 					</section>
 
@@ -239,30 +242,31 @@
 				<!-- Six -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2>Ipsum sed consequat</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
+							<h2>My Work</h2>
+							<p>When you give a girl a computer, she creates beautiful codes with it. <br>
+							Check out my work below!</p>
 							<div class="items style1 medium onscroll-fade-in">
 								<section>
 									<span class="icon style2 major fa-gem"></span>
-									<h3>Lorem</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<a href="https://codepen.io/karenjli/pen/agQpmp"><h3>Sweet Eats Bakery Home Page</h3></a>
+									<p>Organized site content in HTML tags and added CSS style to the home page</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-save"></span>
-									<h3>Ipsum</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<a href ="https://github.com/karenjli/UI-III-Flexbox"><h3>Great Idea! Home Page</h3></a>
+									<p>Used HTML tags to organize content and style web page with CSS (Flexbox and animation included)</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-chart-bar"></span>
-									<h3>Dolor</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<a href ="https://github.com/karenjli/responsive-web-design-I"><h3>Great Idea! Service Page</h3></a>
+									<p>Used responsive styling in the Great Idea! Website to accommodate desktop, tablet and mobile users</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-wifi"></span>
-									<h3>Amet</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<a href="https://github.com/karenjli/Sprint-Challenge--User-Interface"><h3>Lambda School Sprint</h3></a>
+									<p>My first Sprint Challenge at Lambda School on User Interface. Project features HTML, CSS Flexbox Module and Git</p>
 								</section>
-								<section>
+								<!----<section>
 									<span class="icon solid style2 major fa-cog"></span>
 									<h3>Magna</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
@@ -301,7 +305,7 @@
 									<span class="icon solid style2 major fa-leaf"></span>
 									<h3>Risus</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
+								</section>-->
 							</div>
 						</div>
 					</section>
@@ -337,10 +341,10 @@
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://twitter.com/KarenjyLi" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://www.facebook.com/klavierkaren/" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<li><a href="https://www.instagram.com/karen_lijy" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://www.linkedin.com/in/karenjli" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 							<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
